--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ border: none;
 				<div class="box_bottom"></div>
 			</div>
 
-            <div class="right_side" style="width: 500px; height: 560px">
+            <div class="right_side" style="width: 500px; height: 700px">
 				<div class="article">
 					<h3>&nbsp;</h3>
 					<h3><font size="3"> </font></h3>
@@ -240,7 +240,7 @@ algorithms for predicting the functions of genome sequences.
 Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell sequencing and spatial transcriptomics.</p>
 		<h3><font size="3">News about our research: </font></h3>			
 	<p>April, 2023, a research paper pulished in the top journal "Science" (<a target="_blank" href="https://www.science.org/doi/10.1126/science.abn7930">Mammalian evolution of human cis-regulatory elements and transcription factor binding sites </a>) 
-		cited two papers from our team: (1) FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets; 
+		cited two papers of our team: (1) FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets; 
 		(2)ProSampler: an ultra-fast and accurate motif finder in large ChIP-seq datasets for combinatory motif discovery
  </p>
 	                                 </div>
