--- a/grad.htm
+++ b/grad.htm
@@ -207,23 +207,24 @@ border: none;
 
 
 
-<p>•	现指导研究生10名：	
-<p>&nbsp; 李荔暄；谢林娟（2020级）
+<p>•	现指导研究生12名：	
 <p>&nbsp; 潘镜伊；雷添媛；秦璐；朱邦瑜（2021级）
 <p>&nbsp; 高若莹、陈亮、丛涵林、张光亚（2022级）
+<p>&nbsp; （2023级）
 <hr />
-<p>•	已毕业研究生（29名）：</p>
-<p>&nbsp;	2007：丁春勇；侯刚</p>
-<p>&nbsp;	2012：车振凯；陈超；柴秀琴</p>
-<p>&nbsp;	2013：连高欣；陈龙鑫</p>
-<p>&nbsp;	2014：耿丹丹；汪珩；韩旭</p>
-<p>&nbsp;	2015：张蕊；张甜；宁静雁；王芳</p>
+<p>•	已毕业研究生（31名）：</p>
+<p>&nbsp;	2007：丁春勇、侯刚</p>
+<p>&nbsp;	2012：车振凯、陈超、柴秀琴</p>
+<p>&nbsp;	2013：连高欣、陈龙鑫</p>
+<p>&nbsp;	2014：耿丹丹、汪珩、韩旭</p>
+<p>&nbsp;	2015：张蕊、张甜、宁静雁、王芳</p>
 <p>&nbsp;	2016：张莹</p>
-<p>&nbsp;	2017：李静；张志红</p>
-<p>&nbsp;	2018：李婷，陈艳楠</p>
-<p>&nbsp;	2019：武思文，冯艳霞，李艳慧，邵帅，薛利祥</p>
-<p>&nbsp;	2020: 刘玥晗，时仲祎	</p>
-<p>&nbsp;2022：崔雅轩，崔可光，李帅</p>
+<p>&nbsp;	2017：李静、张志红</p>
+<p>&nbsp;	2018：李婷、陈艳楠</p>
+<p>&nbsp;	2019：武思文、冯艳霞、李艳慧、邵帅、薛利祥</p>
+<p>&nbsp;	2020: 刘玥晗、时仲祎</p>
+<p>&nbsp;2022：崔雅轩、崔可光、李帅</p>
+<p>&nbsp;2023：李荔暄、谢林娟</p>
 <hr />
 <p></p>
 
@@ -238,7 +239,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Sept 30,2022</p>
+			<p>Updated by Sept 30,2023</p>
 		</div>
 
 </div>
