--- a/computing.htm
+++ b/computing.htm
@@ -211,6 +211,12 @@ border: none;
 
 <h3><font size="3">开发的计算工具 </font></h3>
 <hr />
+<p>•DeepScena：基于深度学习的单细胞RNA测序数据的聚类算法。</p>
+<p> Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations.
+(The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/37769630/">37769630)</a></p>
+<p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/DeepScena"> https://github.com/shaoqiangzhang/DeepScena </a> 
+</p>
+<hr />	
 <p>•DEGman：单细胞RNA测序数据的差异基因分析工具。(2022)</p>
 <p> differentially-expressed genes of scRNA-seq data
 (The related article: <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/36009024/">PMID: 36009024)</a></p>
@@ -228,21 +234,6 @@ border: none;
 
 <p>FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets (The related article:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/30957858">PMID:30957858</a>)</p>
 <p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/fishermp"> https://github.com/shaoqiangzhang/fishermp </a></p>
-
-<hr />					
-
-<p>•GLECLUBS：单一原核生物全基因组范围转录因子结合位点预测算法。</p>
-<p> GLECLUBS: an algorithm for predicting cis-regulatory binding sites in a prokaryotic genome.
-(The related article: PMID:<a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/19383880">19383880)</a></p>
-<p>Website: <a target="_blank" href="http://gleclubs.uncc.edu/pbs"> http://gleclubs.uncc.edu/pbs </a> 
-</p>
-
-<hr />
-
-<p>•eGLECLUBS：一组进化距离相近的原核生物全基因组范围转录因子结合位点预测算法。</p>
-<p>eGLECLUBS is an extended version of GLECLUBS for simultaneously predicting binding sites in a group of closely related prokaryotic genomes.</p>
-<p>Website: <a target="_blank" href="http://gleclubs.uncc.edu/pbs"> http://gleclubs.uncc.edu/pbs </a> </p>
-<p>The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/20653963">PMID: 20653963</a></p>
 
 <hr />
 
@@ -269,9 +260,7 @@ border: none;
 
 <hr />
 
-<p>•StepLink：基于RNA-Seq的转录组拼接算法。</p>
 
-<p>Source code: https://github.com/shaoqiangzhang/steplink  </p>
 
 					</div>
             </div>
@@ -279,7 +268,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Sept 18,2022</p>
+			<p>Updated by Oct 14,2023</p>
 		</div>
 
 </div>
