--- a/computing.htm
+++ b/computing.htm
@@ -191,15 +191,14 @@ border: none;
 				<div class="box" style="width: 144px; height: 900px">
 					<p>
 					
-<font size="2"> <p>DEGman</p>
+<font size="2"><p>DeepScena</p> 
+	<p>DEGman</p>
 	<p>SCENA</p>
 	<p>FisherMP</p>
 	<p>MotifClick</p>
-<p>GLECLUBS</p>
-<p>eGLECLUBS</p>
 <p>SPIC</p>
 <p>CLIMP</p>
-<p>StepLink</p><p>CREMP</p></font>
+</font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
