--- a/computing.htm
+++ b/computing.htm
@@ -210,7 +210,7 @@ border: none;
 
 <h3><font size="3">开发的计算工具 </font></h3>
 <hr />
-<p>•DeepScena：基于深度学习的单细胞RNA测序数据的聚类算法。</p>
+<p>•DeepScena：基于深度学习的单细胞RNA测序数据的聚类算法。(2023) </p>
 <p> Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations.
 (The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/37769630/">37769630)</a></p>
 <p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/DeepScena"> https://github.com/shaoqiangzhang/DeepScena </a> 
@@ -236,7 +236,7 @@ border: none;
 
 <hr />
 
-<p>•MotifClick：一个全新的模体发现算法。</p>
+<p>•MotifClick：一个预测转录因子结合位点的模体发现算法。（2011）</p>
 
 <p>MotifClick: A novel motif finding tool for predicting transcription factor binding sites.
  (The related article: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/21679436">PMID:21679436)</a></p>
@@ -244,7 +244,7 @@ border: none;
 
 <hr />
 
-<p>•SPIC：模体相似性近似计算公式。(PMID:24564945)</p>
+<p>•SPIC：模体相似性近似计算公式。(2013)</p>
 
 <p>SPIC: a novel metric for calculating transcription factor binding motif similarity (The related publication: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/pubmed/24564945">PMID:24564945</a>)</p>
 <p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/spic">https://github.com/shaoqiangzhang/spic</a></p>
