--- a/cv.htm
+++ b/cv.htm
@@ -208,7 +208,7 @@ border: none;
 
 <font size="2">
 <p>•<a target="_blank" href="http://orcid.org/0000-0002-4127-0539">ORCID</a></p>
-
+<p>•<a target="_blank" href="https://dblp.org/pid/73/6863.html">DBLP</a></p>
 
 
 
