--- a/pub.htm
+++ b/pub.htm
@@ -213,8 +213,8 @@ border: none;
   <div class="article">
     <h2 align="center" class="STYLE7"><p>Selected Publications</p></h2>
     <div class="page">
-<p> Main published papers in English are listed on <a href="https://orcid.org/0000-0002-4127-0539"> ORCID </a></p>
-<p> Main published papers in Chinese are listed on <a href="https://au.cnki.net/author/personalInfo/000042926045"> CNKI</a></p>
+<p> My published papers written in English can be found on <a href="https://orcid.org/0000-0002-4127-0539"> ORCID </a></p>
+<p> My published papers written in Chinese can be found on <a href="https://au.cnki.net/author/personalInfo/000042926045"> CNKI</a></p>
 </div>
 </div>
 </div>
