--- a/index.html
+++ b/index.html
@@ -218,10 +218,9 @@ border: none;
 					<h3>&nbsp;</h3>
 					<h3><font size="3"> </font></h3>
 					
-					<p><font size="3">*****本学期开设课程（2023年春季）*****</font></p>
-					<p><font size="2">1. 2022级计算机科学与技术专业基础课《高等数学2-2》</p> 
-					<p><font size="2">2. 2020级计算机学院专业选修课《并行程序设计》</p>	
-					<p><font size="2">3. 研究生课程《高等工程数学》</p>
+					<p><font size="3">*****本学期开设课程（2024年春季）*****</font></p>
+					<p><font size="2">1. 2023级计算机科学与技术专业基础课《高等数学2-2》</p> 
+					<p><font size="2">2. 研究生课程《高等工程数学》</p>
 						<i></i>
 					<h3>&nbsp;</h3>
 
@@ -231,7 +230,7 @@ border: none;
 					<img border="0" src="images/bioinfologo.gif" width="266" height="170" align="right"></a></p>
 					
 					<p><font size="2">张少强 博士(天津师范大学, 教授)</p>
-					<p>研究兴趣：生物信息学, 高性能计算, 组合优化</p>
+					<p>研究兴趣：生物信息学, 智能算法，高性能计算, 组合优化</p>
 
 					<p>主要工作是运用组合优化等算法通过高性能计算对基因组序列进行功能预测。
 					最近主要工作包括对新一代测序数据的模体发现和序列拼接、基因组非编码区域功能预测、单细胞和空间转录组学数据分析等。</p></font>
@@ -239,7 +238,8 @@ border: none;
 algorithms for predicting the functions of genome sequences.
 Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell sequencing and spatial transcriptomics.</p>
 	<hr />	
-	<h3><font size="3">News about our research: </font></h3>			
+	<h3><font size="3">News from our group: </font></h3>	
+					<p>• 2023年9月，恭喜研究生雷添媛同学获得2023年国家奖学金，DeepScena论文在Briefings in Bioinformatics发表！  </p>
 	<p>• April, 2023, a research paper pulished in the top journal "Science" (<a target="_blank" href="https://www.science.org/doi/10.1126/science.abn7930">Mammalian evolution of human cis-regulatory elements and transcription factor binding sites </a>) 
 		cited two papers of our team: (1) FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets; 
 		(2)ProSampler: an ultra-fast and accurate motif finder in large ChIP-seq datasets for combinatory motif discovery
