--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@ border: none;
 					<h2>About me:</h2>
 				</div>	
 				<div class="box" style="width: 144px; height: 547px">
-					<p>
-					<a target="_blank" href="cv.htm"><img border="0" src="images/zsqp.JPG" width="140" height="225"></a></p>
+
 					<font size="2"> <p>Zhang, Shaoqiang, PhD/Professor</p>
 <p>Research areas: Bioinformatics, High-performance Computing, and Combinatorial Optimization.</p>
 
@@ -226,8 +225,7 @@ border: none;
 
 					</font></p>
 					<hr />
-					<p><a target="_blank" href="http://">
-					<img border="0" src="images/bioinfologo.gif" width="266" height="170" align="right"></a></p>
+					<p> <a target="_blank" href="cv.htm"><img border="0" src="images/zsqp.JPG" width="140" height="225" align="right"></a></p>
 					
 					<p><font size="2">张少强 博士(天津师范大学, 教授)</p>
 					<p>研究兴趣：生物信息学, 智能算法，高性能计算, 组合优化</p>
@@ -239,11 +237,14 @@ algorithms for predicting the functions of genome sequences.
 Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell sequencing and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News from our group: </font></h3>	
-					<p>• 2023年9月，恭喜研究生雷添媛同学获得2023年国家奖学金，DeepScena论文在Briefings in Bioinformatics发表！  </p>
+					<p>• 2023年10月，恭喜研究生雷添媛同学获得2023年国家奖学金，DeepScena算法论文在Briefings in Bioinformatics发表！  </p>
 	<p>• April, 2023, a research paper pulished in the top journal "Science" (<a target="_blank" href="https://www.science.org/doi/10.1126/science.abn7930">Mammalian evolution of human cis-regulatory elements and transcription factor binding sites </a>) 
 		cited two papers of our team: (1) FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets; 
 		(2)ProSampler: an ultra-fast and accurate motif finder in large ChIP-seq datasets for combinatory motif discovery
  </p>
+					<p>• 2022年10月，恭喜研究生谢林娟同学获得2022年国家奖学金，DEGman算法论文在Biomolecules发表！  </p>
+					<p>• 2022年6月，恭喜研究生崔雅轩同学成功申请日本筑波大学读博资格！ </p>
+					<p>• 2021年10月，恭喜研究生崔雅轩同学获得2021年国家奖学金，SCENA算法论文在Briefings in Bioinformatics发表！  </p>
 	                                 </div>
             </div>	
 </div>
