--- a/grad.htm
+++ b/grad.htm
@@ -210,7 +210,7 @@ border: none;
 <p>•	现指导研究生12名：	
 <p>&nbsp; 潘镜伊；雷添媛；秦璐；朱邦瑜（2021级）
 <p>&nbsp; 高若莹、陈亮、丛涵林、张光亚（2022级）
-<p>&nbsp; （2023级）
+<p>&nbsp; 刘虎威、陈亚楠、刘欣怡、周泓（2023级）
 <hr />
 <p>•	已毕业研究生（31名）：</p>
 <p>&nbsp;	2007：丁春勇、侯刚</p>
