--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ border: none;
 
             <div class="right_side" style="width: 500px; height: 800px">
 				<div class="article">
-					<h3>&nbsp;</h3>
+					<h3>张少强 博士(天津师范大学, 教授)</h3>
 					<h3><font size="3"> </font></h3>
 					
 
@@ -225,8 +225,7 @@ border: none;
 					<hr />
 					<p> <a target="_blank" href="cv.htm"><img border="0" src="images/zsqp.JPG" width="140" height="225" align="right"></a></p>
 					
-					<p><font size="2">张少强 博士(天津师范大学, 教授)</p>
-					<p>研究兴趣：生物信息学, 智能算法, 高性能计算, 组合优化</p>
+					<p><font size="2"> 研究兴趣：生物信息学, 智能算法, 高性能计算, 组合优化</p>
 
 					<p>主要工作是运用组合优化等算法通过高性能计算对基因组序列进行功能预测。
 					最近主要工作包括对新一代测序数据的模体发现和序列拼接、基因组非编码区域功能预测、单细胞和空间转录组学数据分析等。</p></font>
