--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ border: none;
             <div class="right_side" style="width: 500px; height: 800px">
 				<div class="article">
 					<h3>&nbsp;</h3>
-					<h3><font size="3">>张少强 博士(天津师范大学, 教授) </font></h3>
+					<h3><font size="3">张少强 博士(天津师范大学, 教授) </font></h3>
 					<i>研究兴趣：生物信息学, 智能算法, 高性能计算, 组合优化</i>
 					
 
