--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@ algorithms for predicting the functions of genome sequences.
 Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell sequencing and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News from our group: </font></h3>	
-					<p>• 2023年10月，恭喜研究生雷添媛同学获得2023年国家奖学金，DeepScena算法论文在Briefings in Bioinformatics发表！  </p>
-	<p>• April, 2023, a research paper pulished in the top journal "Science" (<a target="_blank" href="https://www.science.org/doi/10.1126/science.abn7930">Mammalian evolution of human cis-regulatory elements and transcription factor binding sites </a>) 
-		cited two papers of our team: (1) FisherMP: fully parallel algorithm for detecting combinatorial motifs from large ChIP-seq datasets; 
-		(2)ProSampler: an ultra-fast and accurate motif finder in large ChIP-seq datasets for combinatory motif discovery
+					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”被SCI一区top期刊 Advanced Science (IF=15。1）录用！ </p>
+					<p>• 2024年1月，恭喜研究生高若莹同学申请的学校研究生研究项目被资助，获批重点项目！  </p>
+					<p>• 2023年10月，恭喜研究生雷添媛同学获得2023年国家奖学金，DeepScena算法论文在Briefings in Bioinformatics期刊发表！  </p>
+	<p>• 2023年3月，课题组算法论文FisherMP先后被<a target="_blank" href="https://www.science.org/doi/10.1126/science.abn7930">Science </a>和Nature的期刊论文引用。  	
  </p>
-					<p>• 2022年10月，恭喜研究生谢林娟同学获得2022年国家奖学金，DEGman算法论文在Biomolecules发表！  </p>
+					<p>• 2022年10月，恭喜研究生谢林娟同学获得2022年国家奖学金，DEGman算法论文在Biomolecules期刊发表！  </p>
 					<p>• 2022年6月，恭喜研究生崔雅轩同学成功申请日本筑波大学读博资格！ </p>
-					<p>• 2021年10月，恭喜研究生崔雅轩同学获得2021年国家奖学金，SCENA算法论文在Briefings in Bioinformatics发表！  </p>
+					<p>• 2021年10月，恭喜研究生崔雅轩同学获得2021年国家奖学金，SCENA算法论文在Briefings in Bioinformatics期刊发表！  </p>
 
 					<hr />
 					<p><font size="3">*****本学期开设课程（2024年春季）*****</font></p>
@@ -251,7 +251,7 @@ Recent work mainly includes motif finding and sequence assembly on Next-generati
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Mar 2,2024</p>
+			<p>Updated by Mar 2, 2024</p>
 			
 
 </div>
