--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ algorithms for predicting the functions of genome sequences.
 Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell sequencing and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News from our group: </font></h3>	
-					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”被SCI一区top期刊 Advanced Science (IF=15。1）录用！ </p>
+					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”被SCI一区top期刊 Advanced Science (IF=15.1）录用！ </p>
 					<p>• 2024年1月，恭喜研究生高若莹同学申请的学校研究生研究项目被资助，获批重点项目！  </p>
 					<p>• 2023年10月，恭喜研究生雷添媛同学获得2023年国家奖学金，DeepScena算法论文在Briefings in Bioinformatics期刊发表！  </p>
 	<p>• 2023年3月，课题组算法论文FisherMP先后被<a target="_blank" href="https://www.science.org/doi/10.1126/science.abn7930">Science </a>和Nature的期刊论文引用。  	
