--- a/index.html
+++ b/index.html
@@ -202,10 +202,16 @@ border: none;
 				<div class="box_top">
 					<h2>About me:</h2>
 				</div>	
-				<div class="box" style="width: 144px; height: 547px">
+				<div class="box" style="width: 144px; height: 700px">
 
-					<font size="2"> <p>Zhang, Shaoqiang, PhD/Professor</p>
-<p>Research areas: Bioinformatics, AI algorithms, High-performance Computing, and Combinatorial Optimization.</p>
+					<font size="2"> <p>Zhang, Shaoqiang, </p> <p>Ph.D. / Professor</p>
+						<p></p>
+						<hr />
+						<p></p>
+<p>Research areas: </p> <p> Bioinformatics, </p>
+	 <p> AI algorithms,  </p>
+		  <p> High-performance Computing, and  </p>
+			   <p>Combinatorial Optimization.</p>
 
 <p></p></font>
 				</div>
