--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ border: none;
 						<hr />
 						<p></p>
 <p>Research areas: </p> <p> Bioinformatics, </p>
-	 <p> AI algorithms,  </p>
-		  <p> High-performance Computing, and  </p>
+	 <p>Machine Learning,  </p>
+		  <p> High-performance Computing, &  </p>
 			   <p>Combinatorial Optimization.</p>
 
 <p></p></font>
@@ -222,7 +222,7 @@ border: none;
 				<div class="article">
 					<h3>&nbsp;</h3>
 					<h3><font size="3">张少强 博士(天津师范大学, 教授) </font></h3>
-					<i>研究兴趣：生物信息学, 智能算法, 高性能计算, 组合优化</i>
+					<i>研究兴趣：生物信息学、机器学习算法、高性能计算、组合优化算法</i>
 					
 
 					</font></p>
@@ -230,11 +230,11 @@ border: none;
 					<p> <a target="_blank" href="cv.htm"><img border="0" src="images/zsqp.JPG" width="140" height="225" align="right"></a></p>
 					
 					<p><font size="2"> 
-					主要工作是运用智能算法、组合优化算法、或统计方法通过高性能计算对基因组序列进行功能预测。
-					最近主要工作包括对新一代测序数据的模体发现和序列拼接、基因组非编码区域功能预测、单细胞和空间转录组学数据分析等。</p></font>
+					主要工作是运用机器学习算法、组合优化算法、或统计方法通过高性能计算对基因组序列进行功能预测。
+					最近主要工作包括对新一代测序数据的模体发现和序列拼接、基因组非编码区域功能预测、单细胞组学和空间转录组学数据分析等。</p></font>
 					<p>The main work is to use AI algorithms, combinatorial optimization, or statistic  methods to design high-performance 
 algorithms for predicting the functions of genome sequences.
-Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell sequencing and spatial transcriptomics.</p>
+Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell omics sequencing and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News from our group: </font></h3>	
 					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”被SCI一区top期刊 Advanced Science (IF=15.1）录用！ </p>
