--- a/grad.htm
+++ b/grad.htm
@@ -192,7 +192,7 @@ border: none;
 				<div class="box" style="width: 144px; height: 500px">
 					<p>
 					
-					<font size="2">•每年招收研究生2-4名（计算机科学学硕1~2名，软件工程专硕1~2名），方向为生物信息学（机器学习与高性能计算）。 </font>
+					<font size="2">•每年招收研究生2-4名（计算机科学学硕1~2名，大数据专硕1名），方向为生物信息学（机器学习与高性能计算）。 </font>
 				</div>
 				<div class="box_bottom"></div>
 			</div>
@@ -207,12 +207,12 @@ border: none;
 
 
 
-<p>•	现指导研究生12名：	
-<p>&nbsp; 潘镜伊；雷添媛；秦璐；朱邦瑜（2021级）
+<p>•	现指导研究生11名：	
 <p>&nbsp; 高若莹、陈亮、丛涵林、张光亚（2022级）
 <p>&nbsp; 刘虎威、陈亚楠、刘欣怡、周泓（2023级）
+<p>&nbsp; 段婉亭、马轶琛、肖雨欣（2024级）
 <hr />
-<p>•	已毕业研究生（31名）：</p>
+<p>•	已毕业研究生（34名）：</p>
 <p>&nbsp;	2007：丁春勇、侯刚</p>
 <p>&nbsp;	2012：车振凯、陈超、柴秀琴</p>
 <p>&nbsp;	2013：连高欣、陈龙鑫</p>
@@ -225,6 +225,7 @@ border: none;
 <p>&nbsp;	2020: 刘玥晗、时仲祎</p>
 <p>&nbsp;2022：崔雅轩、崔可光、李帅</p>
 <p>&nbsp;2023：李荔暄、谢林娟</p>
+<p>&nbsp;2024：潘镜伊、雷添媛、秦璐、朱邦瑜</p>
 <hr />
 <p></p>
 
@@ -239,7 +240,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Sept 30,2023</p>
+			<p>Updated by Sept 21,2024</p>
 		</div>
 
 </div>
