--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@ border: none;
 					<p> <a target="_blank" href="cv.htm"><img border="0" src="images/zsqp.JPG" width="140" height="225" align="right"></a></p>
 					
 					<p><font size="2"> 
-					主要工作是运用机器学习算法、组合优化算法、或统计方法通过高性能计算对基因组序列进行功能预测。
-					最近主要工作包括对新一代测序数据的模体发现和序列拼接、基因组非编码区域功能预测、单细胞组学和空间转录组学数据分析等。</p></font>
-					<p>The main work is to use AI algorithms, combinatorial optimization, or statistic  methods to design high-performance 
+					主要工作是运用机器学习、组合优化、概率统计等方法通过高性能计算对基因组序列进行功能预测。
+					最近主要工作包括对新一代测序数据的模体发现和序列拼接、基因组非编码区域功能预测、单细胞多组学和空间转录组学算法设计和数据分析等。</p></font>
+					<p>The main work is to use machine learning, combinatorial optimization, or probabilistic methods to design high-performance 
 algorithms for predicting the functions of genome sequences.
-Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and data analysis on single-cell omics sequencing and spatial transcriptomics.</p>
+Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and algorithm design and data analysis on single-cell omics sequencing and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News from our group: </font></h3>	
 					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”被SCI一区top期刊 Advanced Science (IF=15.1）录用！ </p>
@@ -257,7 +257,7 @@ Recent work mainly includes motif finding and sequence assembly on Next-generati
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Mar 2, 2024</p>
+			<p>Updated by June 2, 2024</p>
 			
 
 </div>
