--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@ Recent work mainly includes motif finding and sequence assembly on Next-generati
 					<p>• 2021年10月，恭喜研究生崔雅轩同学获得2021年国家奖学金，SCENA算法论文在Briefings in Bioinformatics期刊发表！  </p>
 
 					<hr />
-					<p><font size="3">*****本学期开设课程（2024年春季）*****</font></p>
-					<p><font size="2">1. 2023级计算机科学与技术专业基础课《高等数学2-2》</p> 
-					<p><font size="2">2. 研究生课程《高等工程数学》</p>
+					<p><font size="3">*****本学期开设课程（2024年秋季）*****</font></p>
+					<p><font size="2">1. 2024级计算机科学与技术专业基础课《高等数学2-1》</p> 
+					<p><font size="2">2. 研究生讨论班 </p>
 					
 	                                 </div>
             </div>	
