--- a/computing.htm
+++ b/computing.htm
@@ -190,8 +190,13 @@ border: none;
 				</div>	
 				<div class="box" style="width: 144px; height: 900px">
 					<p>
+						
 					
-<font size="2"><p>DeepScena</p> 
+<font size="2">
+	<p>HiCENT</p>
+	<p>DeepBID</p>
+<p>DeepIMAGER</p> 
+	<p>DeepScena</p> 
 	<p>DEGman</p>
 	<p>SCENA</p>
 	<p>FisherMP</p>
