--- a/computing.htm
+++ b/computing.htm
@@ -214,6 +214,12 @@ border: none;
 
 
 <h3><font size="3">开发的计算工具 </font></h3>
+					<hr />
+<p>•DeepIMAGER：基于有监督深度学习的单细胞RNA测序数据的基因调控网络预测算法。(2024) </p>
+<p> A supervised deep-learning model for predicting cell-specific gene regulatory networks from scRNA-seq and ChIP-seq data.
+(The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/39062480/">39062480)</a></p>
+<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/DeepIMAGER"> https://github.com/shaoqiangzhang/DeepIMAGER </a> 
+</p>
 <hr />
 <p>•DeepScena：基于深度学习的单细胞RNA测序数据的聚类算法。(2023) </p>
 <p> Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations.
