--- a/computing.htm
+++ b/computing.htm
@@ -194,6 +194,7 @@ border: none;
 					
 <font size="2">
 	<p>HiCENT</p>
+	<p>GRANGER</p>
 	<p>DeepBID</p>
 <p>DeepIMAGER</p> 
 	<p>DeepScena</p> 
@@ -214,7 +215,13 @@ border: none;
 
 
 <h3><font size="3">开发的计算工具 </font></h3>
-					<hr />
+<hr />
+<p>•DeepBID：基于深度聚类的多批次单细胞RNA测序数据整合模型。(2024) </p>
+<p>A deep learning model for batch integration of single-Cell RNA-seq data by deep clustering
+(The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/38778573/">38778573)</a></p>
+<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/DeepBID"> https://github.com/shaoqiangzhang/DeepBID </a> 
+</p>
+<hr />
 <p>•DeepIMAGER：基于有监督深度学习的单细胞RNA测序数据的基因调控网络预测算法。(2024) </p>
 <p> A supervised deep-learning model for predicting cell-specific gene regulatory networks from scRNA-seq and ChIP-seq data.
 (The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/39062480/">39062480)</a></p>
@@ -224,19 +231,19 @@ border: none;
 <p>•DeepScena：基于深度学习的单细胞RNA测序数据的聚类算法。(2023) </p>
 <p> Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations.
 (The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/37769630/">37769630)</a></p>
-<p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/DeepScena"> https://github.com/shaoqiangzhang/DeepScena </a> 
+<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/DeepScena"> https://github.com/shaoqiangzhang/DeepScena </a> 
 </p>
 <hr />	
 <p>•DEGman：单细胞RNA测序数据的差异基因分析工具。(2022)</p>
 <p> differentially-expressed genes of scRNA-seq data
 (The related article: <a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/36009024/">PMID: 36009024)</a></p>
-<p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/DEGman">https://github.com/shaoqiangzhang/DEGman</a> 
+<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/DEGman">https://github.com/shaoqiangzhang/DEGman</a> 
 </p>
 <hr />
 <p>•SCENA：单细胞RNA测序数据的细胞聚类算法。(2021)</p>
 <p> Consensus clustering of single-cell RNA-seq data by enhancing network affinity
 (The related article: PMID:<a target="_blank" href="https://pubmed.ncbi.nlm.nih.gov/34160582/">34160582)</a></p>
-<p>Website: <a target="_blank" href="https://github.com/shaoqiangzhang/SCENA">https://github.com/shaoqiangzhang/SCENA</a> 
+<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/SCENA">https://github.com/shaoqiangzhang/SCENA</a> 
 </p>
 
 <hr />
