--- a/contact.htm
+++ b/contact.htm
@@ -188,7 +188,7 @@ border: none;
 				<div class="box_top">
 					<h2>Contact me</h2>
 				</div>	
-				<div class="box" style="width: 144px; height: 300px">
+				<div class="box" style="width: 344px; height: 300px">
 					<p>
 					
 					<font size="2"> </font>
@@ -196,7 +196,7 @@ border: none;
 				<div class="box_bottom"></div>
 			</div>
 
-            <div class="right_side" style="width: 500px; height: 300px">
+            <div class="right_side" style="width: 300px; height: 300px">
 				<div class="article">
 
 
@@ -204,16 +204,15 @@ border: none;
 <h3><font size="3">联系方式 </font></h3>
 <hr />
 
-
-<p>计算机科学系,计算机与信息工程学院, </p>
+<p>张少强 </p>
+<p>计算机与信息工程学院, </p>
 <p>天津师范大学, 天津市西青区宾水西道393号，300387</p>
 <p>电子邮箱：zhangshaoqiang @ tjnu.edu.cn </p>
 <p>办公室：博理楼C区201室</p>
 <p>实验室：博理楼C区225室</p>
 
 <hr />
-<p>ZHANG, Shaoqiang PhD/Professor</p>
-<p>Department of Computer Science,</p>
+<p>ZHANG, Shaoqiang PhD/Prof</p>
 <p>College of Computer and Information Engineering, </p>
 <p><a target="_blank" href="http://www.tjnu.edu.cn">Tianjin Normal University</a> , 393 Bin Shui Xi Dao，Tianjin, 300387</p>
 <p>Email: zhangshaoqiang @  tjnu.edu.cn</p>
@@ -226,7 +225,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Aug 30,2021</p>
+			<p>Updated by Aug 30,2024</p>
 		</div>
 
 </div>
