--- a/cv.htm
+++ b/cv.htm
@@ -206,7 +206,7 @@ border: none;
 
 <font size="2">
 <p>•<a target="_blank" href="http://orcid.org/0000-0002-4127-0539">ORCID</a></p>
-<p>•<a target="_blank" href="https://dblp.org/pid/73/6863.html">DBLP</a></p>
+<p>•<a target="_blank" href="http://scholar.huezhi.com/profile/_3SFSYJDhZL_7wUdwI24NPxUBStdtTM2yqosBAqXja37TrnRh_E9pxM5HGmdxvut">huezhi</a></p>
 
 
 
