--- a/index.html
+++ b/index.html
@@ -231,24 +231,25 @@ border: none;
 					
 					<p><font size="2"> 
 					主要工作是运用机器学习、组合优化、概率统计等方法通过高性能计算对基因组序列进行功能预测。
-					最近主要工作包括对新一代测序数据的模体发现和序列拼接、基因组非编码区域功能预测、单细胞多组学和空间转录组学算法设计和数据分析等。</p></font>
+					最近主要工作包括针对单细胞三维基因组学、单细胞转录组学和空间转录组学算法设计和数据分析等。</p></font>
 					<p>The main work is to use machine learning, combinatorial optimization, or probabilistic methods to design high-performance 
 algorithms for predicting the functions of genome sequences.
-Recent work mainly includes motif finding and sequence assembly on Next-generation Sequencing data, functional prediction of non-coding regions, and algorithm design and data analysis on single-cell omics sequencing and spatial transcriptomics.</p>
+Recent work mainly includes algorithm design and data analysis on single-cell 3D genomics (scHi-C), single-cell transcriptomics sequencing (scRNA-seq, scATAC-seq) and spatial transcriptomics.</p>
 	<hr />	
-	<h3><font size="3">News from our group: </font></h3>	
+	<h3><font size="3">News: </font></h3>	
+					<p>• 2024年11月，恭喜研究生张光亚同学获得2024年度国家奖学金！ </p>
 					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”被SCI一区top期刊 Advanced Science (IF=15.1）录用！ </p>
 					<p>• 2024年1月，恭喜研究生高若莹同学申请的学校研究生研究项目被资助，获批重点项目！  </p>
-					<p>• 2023年10月，恭喜研究生雷添媛同学获得2023年国家奖学金，DeepScena算法论文在Briefings in Bioinformatics期刊发表！  </p>
+					<p>• 2023年10月，恭喜研究生雷添媛同学获得2023年度国家奖学金，DeepScena算法论文在Briefings in Bioinformatics期刊发表！  </p>
 	<p>• 2023年3月，课题组算法论文FisherMP先后被<a target="_blank" href="https://www.science.org/doi/10.1126/science.abn7930">Science </a>和Nature的期刊论文引用。  	
  </p>
-					<p>• 2022年10月，恭喜研究生谢林娟同学获得2022年国家奖学金，DEGman算法论文在Biomolecules期刊发表！  </p>
+					<p>• 2022年10月，恭喜研究生谢林娟同学获得2022年度国家奖学金，DEGman算法论文在Biomolecules期刊发表！  </p>
 					<p>• 2022年6月，恭喜研究生崔雅轩同学成功申请日本筑波大学读博资格！ </p>
 					<p>• 2021年10月，恭喜研究生崔雅轩同学获得2021年国家奖学金，SCENA算法论文在Briefings in Bioinformatics期刊发表！  </p>
 
 					<hr />
-					<p><font size="3">*****本学期开设课程（2024年秋季）*****</font></p>
-					<p><font size="2">1. 2024级计算机科学与技术专业基础课《高等数学2-1》</p> 
+					<p><font size="3">*****本学期开设课程（2025年春季）*****</font></p>
+					<p><font size="2">1. 2024级计算机科学与技术专业基础课《高等数学2-2》</p> 
 					<p><font size="2">2. 研究生讨论班 </p>
 					
 	                                 </div>
@@ -257,7 +258,7 @@ Recent work mainly includes motif finding and sequence assembly on Next-generati
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by June 2, 2024</p>
+			<p>Updated by Nov 2, 2024</p>
 			
 
 </div>
