--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@ algorithms for predicting the functions of genome sequences.
 Recent work mainly includes algorithm design and data analysis on single-cell 3D genomics (scHi-C), single-cell transcriptomics sequencing (scRNA-seq, scATAC-seq) and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News: </font></h3>	
+					<p>• 2025年2月，恭喜研究生张光亚同学成功申请美国罗文大学读博资格！ </p>
 					<p>• 2024年11月，恭喜研究生张光亚同学获得2024年度国家奖学金！ </p>
 					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”被SCI一区top期刊 Advanced Science (IF=15.1）录用！ </p>
 					<p>• 2024年1月，恭喜研究生高若莹同学申请的学校研究生研究项目被资助，获批重点项目！  </p>
@@ -258,7 +259,7 @@ Recent work mainly includes algorithm design and data analysis on single-cell 3D
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Nov 2, 2024</p>
+			<p>Updated by Feb 2, 2025</p>
 			
 
 </div>
