--- a/index.html
+++ b/index.html
@@ -237,9 +237,10 @@ algorithms for predicting the functions of genome sequences.
 Recent work mainly includes algorithm design and data analysis on single-cell 3D genomics (scHi-C), single-cell transcriptomics sequencing (scRNA-seq, scATAC-seq) and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News: </font></h3>	
+					<p>• 2025年3月，恭喜研究生陈亮同学关于基因调控网络预测算法GRANGER在Briefings in Bioinformatics期刊发表！ </p>
 					<p>• 2025年2月，恭喜研究生张光亚同学成功申请美国罗文大学读博资格！ </p>
 					<p>• 2024年11月，恭喜研究生张光亚同学获得2024年度国家奖学金！ </p>
-					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”被SCI一区top期刊 Advanced Science (IF=15.1）录用！ </p>
+					<p>• 2024年3月，恭喜研究生秦璐同学的论文 “Deep Batch Integration and Denoise of Single-Cell RNA-seq Data”在SCI一区top期刊 Advanced Science (IF=15.1）发表！ </p>
 					<p>• 2024年1月，恭喜研究生高若莹同学申请的学校研究生研究项目被资助，获批重点项目！  </p>
 					<p>• 2023年10月，恭喜研究生雷添媛同学获得2023年度国家奖学金，DeepScena算法论文在Briefings in Bioinformatics期刊发表！  </p>
 	<p>• 2023年3月，课题组算法论文FisherMP先后被<a target="_blank" href="https://www.science.org/doi/10.1126/science.abn7930">Science </a>和Nature的期刊论文引用。  	
@@ -251,7 +252,7 @@ Recent work mainly includes algorithm design and data analysis on single-cell 3D
 					<hr />
 					<p><font size="3">*****本学期开设课程（2025年春季）*****</font></p>
 					<p><font size="2">1. 2024级计算机科学与技术专业基础课《高等数学2-2》</p> 
-					<p><font size="2">2. 研究生讨论班 </p>
+					<p><font size="2">2. 2024级研究生课程《高等工程数学》 </p>
 					
 	                                 </div>
             </div>	
@@ -259,7 +260,7 @@ Recent work mainly includes algorithm design and data analysis on single-cell 3D
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Feb 2, 2025</p>
+			<p>Updated by Mar 2, 2025</p>
 			
 
 </div>
