--- a/computing.htm
+++ b/computing.htm
@@ -209,12 +209,18 @@ border: none;
 				<div class="box_bottom"></div>
 			</div>
 
-            <div class="right_side" style="width: 520px; height: 1100px">
+            <div class="right_side" style="width: 520px; height: 1200px">
 				<div class="article">
 
 
 
 <h3><font size="3">开发的计算工具 </font></h3>
+<hr />
+<p>•GRANGER：基于格兰杰因果关系和循环神经网络用时序单细胞RNA测序数据预测基因调控网络模型。(2024) </p>
+<p>Inferring Gene Regulatory Networks from Time-Series scRNA-seq Data via Granger Causal Recurrent Autoencoders
+(The related article: <a target="_blank" href="https://doi.org/10.1093/bib/bbaf089">DOI: 10.1093/bib/bbaf089</a>)</p>
+<p>Source code: <a target="_blank" href="https://github.com/shaoqiangzhang/GRANGER"> https://github.com/shaoqiangzhang/GRANGER </a> 
+</p>
 <hr />
 <p>•DeepBID：基于深度聚类的多批次单细胞RNA测序数据整合模型。(2024) </p>
 <p>A deep learning model for batch integration of single-Cell RNA-seq data by deep clustering
