--- a/pub.htm
+++ b/pub.htm
@@ -219,8 +219,9 @@ border: none;
 	<p> (4)	Xiguo Zhou, Jingyi Pan, Liang Chen, Shaoqiang Zhang*, and Yong Chen*. 2024. "DeepIMAGER: Deeply Analyzing Gene Regulatory Networks from scRNA-seq Data" Biomolecules, 2024, 14(7): 766.</p>
 	   <p>(5) Tianyuan Lei; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*; Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations, Briefings in Bioinformatics, 2023, 24(6): bbad335  </p> 
 	    <p>(6) Madison Dautle; Shaoqiang Zhang*; Yong Chen*; scTIGER: A Deep-Learning Method for Inferring Gene Regulatory Networks from Case versus Control scRNA-seq Datasets, International Journal of Molecular Sciences, 2023, 24(17): 13339 </p>
-	    <p>(7) Shaoqiang Zhang; Linjuan Xie; Yaxuan Cui; Benjamin R. Carone; Yong Chen ; Detecting Fear-Memory-Related Genes from Neuronal scRNA-seq Data by Diverse Distributions and Bhattacharyya Distance, Biomolecules, 2022, 12(8): 1130 </p>
-	    <p> (8) Yaxuan Cui; Shaoqiang Zhang; Ying Liang; Xiangyun Wang; Thomas N Ferraro; Yong Chen ; Consensus clustering of single-cell RNA-seq data by enhancing network affinity, Briefings in Bioinformatics, 2021, 22(6): bbab236 </p>
+	    <p>(7) Shaoqiang Zhang*; Linjuan Xie; Yaxuan Cui; Benjamin R. Carone; Yong Chen* ; Detecting Fear-Memory-Related Genes from Neuronal scRNA-seq Data by Diverse Distributions and Bhattacharyya Distance, Biomolecules, 2022, 12(8): 1130 </p>
+	    <p>(9) Atlas M Sardoo, Shaoqiang Zhang, Thomas N Ferraro, Thomas M Keck, Yong Chen*, Decoding brain memory formation by single-cell RNA sequencing, Briefings in Bioinformatics, Volume 23, Issue 6, November 2022, bbac412</p>
+	    <p> (8) Yaxuan Cui; Shaoqiang Zhang*; Ying Liang; Xiangyun Wang; Thomas N Ferraro; Yong Chen* ; Consensus clustering of single-cell RNA-seq data by enhancing network affinity, Briefings in Bioinformatics, 2021, 22(6): bbab236 </p>
 	    <p> </p>
 	    <p> </p>
 <p> Published papers written in English can be found on <a href="https://orcid.org/0000-0002-4127-0539"> ORCID </a></p>
