--- a/pub.htm
+++ b/pub.htm
@@ -213,15 +213,15 @@ border: none;
   <div class="article">
     <h2 align="center" class="STYLE7"><p>Selected Publications（in the past 5 years）</p></h2>
     <div class="page">
-	<p> (1)	Liang Chen; Madison Dautle; Ruoying Gao; Shaoqiang Zhang*; Yong Chen*: Inferring Gene Regulatory Networks from Time-Series scRNA-seq Data via Granger Causal Recurrent Autoencoders, Briefings in Bioinformatics, 2025, 26   </p>
+	<p> (1)	Liang Chen; Madison Dautle; Ruoying Gao; Shaoqiang Zhang*; Yong Chen*: Inferring Gene Regulatory Networks from Time-Series scRNA-seq Data via Granger Causal Recurrent Autoencoders,<i> Briefings in Bioinformatics</i>, 2025, 26   </p>
 	    <p> (2) Lu Qin; Guangya Zhang; Shaoqiang Zhang*; Yong Chen*; Deep Batch Integration and Denoise of Single‐Cell RNA‐Seq Data, Advanced Science, 2024, 11(29): 2308934  </p>
-	  <p> (3) Alicia Petrany; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*, Theoretical framework for the difference of two negative binomial distributions and its application in comparative analysis of sequencing data, Genome Research, 2024  </p>
-	<p> (4)	Xiguo Zhou, Jingyi Pan, Liang Chen, Shaoqiang Zhang*, and Yong Chen*. 2024. "DeepIMAGER: Deeply Analyzing Gene Regulatory Networks from scRNA-seq Data" Biomolecules, 2024, 14(7): 766.</p>
-	   <p>(5) Tianyuan Lei; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*; Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations, Briefings in Bioinformatics, 2023, 24(6): bbad335  </p> 
-	    <p>(6) Madison Dautle; Shaoqiang Zhang*; Yong Chen*; scTIGER: A Deep-Learning Method for Inferring Gene Regulatory Networks from Case versus Control scRNA-seq Datasets, International Journal of Molecular Sciences, 2023, 24(17): 13339 </p>
-	    <p>(7) Shaoqiang Zhang*; Linjuan Xie; Yaxuan Cui; Benjamin R. Carone; Yong Chen* ; Detecting Fear-Memory-Related Genes from Neuronal scRNA-seq Data by Diverse Distributions and Bhattacharyya Distance, Biomolecules, 2022, 12(8): 1130 </p>
-	    <p>(9) Atlas M Sardoo, Shaoqiang Zhang, Thomas N Ferraro, Thomas M Keck, Yong Chen*, Decoding brain memory formation by single-cell RNA sequencing, Briefings in Bioinformatics, Volume 23, Issue 6, November 2022, bbac412</p>
-	    <p> (8) Yaxuan Cui; Shaoqiang Zhang*; Ying Liang; Xiangyun Wang; Thomas N Ferraro; Yong Chen* ; Consensus clustering of single-cell RNA-seq data by enhancing network affinity, Briefings in Bioinformatics, 2021, 22(6): bbab236 </p>
+	  <p> (3) Alicia Petrany; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*, Theoretical framework for the difference of two negative binomial distributions and its application in comparative analysis of sequencing data, <i>Genome Research</i>, 2024  </p>
+	<p> (4)	Xiguo Zhou, Jingyi Pan, Liang Chen, Shaoqiang Zhang*, and Yong Chen*. 2024. "DeepIMAGER: Deeply Analyzing Gene Regulatory Networks from scRNA-seq Data" <i>Biomolecules</i>, 2024, 14(7): 766.</p>
+	   <p>(5) Tianyuan Lei; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*; Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations, <i>Briefings in Bioinformatics</i>, 2023, 24(6): bbad335  </p> 
+	    <p>(6) Madison Dautle; Shaoqiang Zhang*; Yong Chen*; scTIGER: A Deep-Learning Method for Inferring Gene Regulatory Networks from Case versus Control scRNA-seq Datasets, <i>International Journal of Molecular Sciences</i>, 2023, 24(17): 13339 </p>
+	    <p>(7) Shaoqiang Zhang*; Linjuan Xie; Yaxuan Cui; Benjamin R. Carone; Yong Chen* ; Detecting Fear-Memory-Related Genes from Neuronal scRNA-seq Data by Diverse Distributions and Bhattacharyya Distance, <i>Biomolecules</i>, 2022, 12(8): 1130 </p>
+	    <p>(9) Atlas M Sardoo, Shaoqiang Zhang, Thomas N Ferraro, Thomas M Keck, Yong Chen*, Decoding brain memory formation by single-cell RNA sequencing, <i>Briefings in Bioinformatics</i>, 2022, 23(6): bbac412</p>
+	    <p> (8) Yaxuan Cui; Shaoqiang Zhang*; Ying Liang; Xiangyun Wang; Thomas N Ferraro; Yong Chen* ; Consensus clustering of single-cell RNA-seq data by enhancing network affinity, <i>Briefings in Bioinformatics</i>, 2021, 22(6): bbab236 </p>
 	    <p> </p>
 	    <p> </p>
 <p> Published papers written in English can be found on <a href="https://orcid.org/0000-0002-4127-0539"> ORCID </a></p>
