--- a/pub.htm
+++ b/pub.htm
@@ -213,7 +213,7 @@ border: none;
   <div class="article">
     <h2 align="center" class="STYLE7"><p>Selected Publications（in the past 5 years）</p></h2>
     <div class="page">
-	<p> (1)	Liang Chen; Madison Dautle; Ruoying Gao; Shaoqiang Zhang*; Yong Chen*: Inferring Gene Regulatory Networks from Time-Series scRNA-seq Data via Granger Causal Recurrent Autoencoders,<i> Briefings in Bioinformatics</i>, 2025, 26   </p>
+	<p> (1)	Liang Chen; Madison Dautle; Ruoying Gao; Shaoqiang Zhang*; Yong Chen*: Inferring Gene Regulatory Networks from Time-Series scRNA-seq Data via Granger Causal Recurrent Autoencoders,<a class="STYLE12"> Briefings in Bioinformatics</a>, 2025, 26   </p>
 	    <p> (2) Lu Qin; Guangya Zhang; Shaoqiang Zhang*; Yong Chen*; Deep Batch Integration and Denoise of Single‐Cell RNA‐Seq Data, Advanced Science, 2024, 11(29): 2308934  </p>
 	  <p> (3) Alicia Petrany; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*, Theoretical framework for the difference of two negative binomial distributions and its application in comparative analysis of sequencing data, <i>Genome Research</i>, 2024  </p>
 	<p> (4)	Xiguo Zhou, Jingyi Pan, Liang Chen, Shaoqiang Zhang*, and Yong Chen*. 2024. "DeepIMAGER: Deeply Analyzing Gene Regulatory Networks from scRNA-seq Data" <i>Biomolecules</i>, 2024, 14(7): 766.</p>
