--- a/pub.htm
+++ b/pub.htm
@@ -161,6 +161,7 @@ border: none;
     #tabsF a:hover span {
       background-position:100% -42px;
       }
+	
 	.STYLE7 {padding: 0 5px 0 0px; margin-bottom: 20px; font-size: 18px; }
 .STYLE8 {
 	color: #000000;
@@ -198,8 +199,6 @@ border: none;
 	<li><a href="grad.htm" title="Graduate students"><span>Graduates</span></a></li>
 	<li><a href="contact.htm" title="Contact me"><span>Contact Me</span></a></li>
 
-
-
   </ul>
 </div>
 
@@ -209,10 +208,29 @@ border: none;
 </div>
 
 <div class="header_top"></div>
-<div style="width: auto; height: auto; margin: 5px 5px 5px 5px">
-  <div class="article">
-    <h2 align="center" class="STYLE7"><p>Selected Publications（in the past 5 years）</p></h2>
-    <div class="page">
+<div class="left">
+			<div class="left_side">
+				<div class="box_top">
+					<h2>Research Profiles</h2>
+				</div>	
+				<div class="box" style="width: 144px; height: 547px">
+					
+
+<font size="2">
+<p>•<a target="_blank" href="http://orcid.org/0000-0002-4127-0539">ORCID</a></p>
+<p>•<a target="_blank" href="http://scholar.huezhi.com/profile/_3SFSYJDhZL_7wUdwI24NPxUBStdtTM2yqosBAqXja37TrnRh_E9pxM5HGmdxvut">huezhi</a></p>
+<p>•<a target="_blank" href="https://au.cnki.net/author/personalInfo/000042926045">CNKI</a></p>
+
+
+</font>
+				</div>
+				<div class="box_bottom"></div>
+</div>
+            <div class="right_side" style="width: 500px; height: 760px">
+				<div class="article">
+
+    <h3><font size="3">Selected Publications（in the past 5 years）</font></h3>
+
 	<p> (1)	Liang Chen; Madison Dautle; Ruoying Gao; Shaoqiang Zhang*; Yong Chen*: Inferring Gene Regulatory Networks from Time-Series scRNA-seq Data via Granger Causal Recurrent Autoencoders,<a class="STYLE12"> Briefings in Bioinformatics</a>, 2025, 26   </p>
 	    <p> (2) Lu Qin; Guangya Zhang; Shaoqiang Zhang*; Yong Chen*; Deep Batch Integration and Denoise of Single‐Cell RNA‐Seq Data, <a class="STYLE12">Advanced Science</a>, 2024, 11(29): 2308934  </p>
 	  <p> (3) Alicia Petrany; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*, Theoretical framework for the difference of two negative binomial distributions and its application in comparative analysis of sequencing data, <a class="STYLE12">Genome Research</a>, 2024,34(10):1636-1650 </p>
@@ -224,16 +242,16 @@ border: none;
 	    <p> (9) Yaxuan Cui; Shaoqiang Zhang*; Ying Liang; Xiangyun Wang; Thomas N Ferraro; Yong Chen* ; Consensus clustering of single-cell RNA-seq data by enhancing network affinity, <a class="STYLE12">Briefings in Bioinformatics</a>, 2021, 22(6): bbab236 </p>
 	    <p> </p>
 	    <p> </p>
-<p> Published papers written in English can be found on <a href="https://orcid.org/0000-0002-4127-0539"> ORCID </a></p>
-<p> Published papers written in Chinese can be found on <a href="https://au.cnki.net/author/personalInfo/000042926045"> CNKI</a></p>
+
+            </div>
+		</div>	
 </div>
-</div>
-</div>
+
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Aug 30,2023</p>
+			<p>Updated by Mar 7,2025</p>
 		</div>
 
-
+</div>
 </body>
 </html>
