--- a/contact.htm
+++ b/contact.htm
@@ -9,16 +9,19 @@
 	font: bold 11px/1.5em Verdana, 宋体;
 	background: #F0F0F0;
 }
+
 h2 {
 	font: bold 14px Verdana, Arial, Helvetica, sans-serif, 宋体;
 	color: #000;
 	margin: 0px;
 	padding: 0px 0px 0px 15px;
 }
+
 img {
 border: none;
 } 
 /* layout------ */
+
 .content { 
 	margin: 10px auto;
 	width: 768px;
@@ -26,7 +29,9 @@ border: none;
 	color: #454545;
 	
 }
+
 .logo {	padding: 18px 0 0 3px; }
+
 /* header */
 .header_top { background: #FEFEFE url(images/big_top.gif) no-repeat; color: #FFF; height: 15px; }
 .header { padding: 0px 10px 0 10px; }
@@ -36,27 +41,8 @@ border: none;
 	background: #f0f0f0;
 	color: #808080;
 }
-/* left side --------- */
-.left {
-	float: left;
-	width: 700px;
-	margin: 0 0 10px 0;
-}
-	
-.sf_left {
-	float: left;
-	width: 203px;
-	height: 77px;
-	background: #5BB2D1 url(images/logobg.gif) repeat-x; 
-	color: #FFF;
-	border-top: 1px solid #137DA2;
-	border-bottom: 1px solid #000;
-	padding: 10px 0 0px 7px;
-}
-.sf_right {
-	width: 537px;
-	float: right;
-}
+
+
 	.box_top {
 		background: #F0F0F0 url(images/leftbox_top.gif) no-repeat;
 		color: #808080;
@@ -70,30 +56,15 @@ border: none;
 		padding: 7px 0 0 5px;
 		margin: 0;
 	}
-	
-	.box {
-		border-left: 2px solid #F0F0F0;
-		border-right: 2px solid #F0F0F0;
-		padding: 0 4px 0 7px;
-		margin: 0;
-		width: 144px;
-		color: #595959;
-		background: #FFF;
-	}
-	
-	.box_bottom {
-		background: #FFF url(images/leftbox_bottom.gif) no-repeat;
-		color: #000;
-		height: 13px;
-		width: 160px;
-		margin: 0 0 7px 0;
-	}
+
+
 		/* left and central column */
-		.left_side { float: left; width: 159px; padding: 0px 5px 8px 8px; }
-		.right_side { float: right; width: 600px; margin: 0 5px 0 0; text-align: justify; }
+		.left_side { float: left; width: 749px; padding: 0px 5px 8px 8px; }
+		.right_side { float: right; width: 10px; margin: 0 5px 0 0; text-align: justify; }
 		
 		.article { padding: 0 5px 0 0px; margin-bottom: 20px; }
 /* footer ------ */
+
 .footer { 
 	clear: both; 
 	text-align: center;
@@ -104,7 +75,9 @@ border: none;
 }
 .footer p {	line-height: 2em; }
 .footer a {	color: #4F4F4F; background: #f0f0f0; border-bottom: 1px dotted #808080; text-decoration: none; } 
+
 /*- Menu Tabs F--------------------------- */
+
     #tabsF {
       float:left;
       width:100%;
@@ -183,20 +156,13 @@ border: none;
 </div>
 
 <div class="header_top"></div>
-<div class="left">
+
 			<div class="left_side">
 				<div class="box_top">
-					<h2>Contact me</h2>
+					<h2>Contact me:</h2>
 				</div>	
-				<div class="box" style="width: 144px; height: 300px">
-					<p>
-					
-					<font size="2"> </font>
-				</div>
-				<div class="box_bottom"></div>
-			</div>
 
-            <div class="right_side" style="width: 500px; height: 300px">
+
 				<div class="article">
 
 
@@ -205,8 +171,8 @@ border: none;
 <hr />
 
 <p>张少强 </p>
-<p>计算机与信息工程学院, </p>
-<p>天津师范大学, 天津市西青区宾水西道393号，300387</p>
+<p>天津师范大学 计算机与信息工程学院,</p>
+<p>天津市西青区宾水西道393号，300387</p>
 <p>电子邮箱：zhangshaoqiang @ tjnu.edu.cn </p>
 <p>办公室：博理楼C区201室</p>
 <p>实验室：博理楼C区225室</p>
@@ -220,7 +186,6 @@ border: none;
 <p></p>
 
 					</div>
-            </div>	
 </div>
 
 <div class="header_bottom"></div>
