--- a/pub.htm
+++ b/pub.htm
@@ -231,15 +231,16 @@ border: none;
 
     <h3><font size="3">Selected Publications（in the past 5 years）</font></h3>
 
-	<p> (1)	Liang Chen; Madison Dautle; Ruoying Gao; Shaoqiang Zhang*; Yong Chen*: Inferring Gene Regulatory Networks from Time-Series scRNA-seq Data via Granger Causal Recurrent Autoencoders,<a class="STYLE12"> Briefings in Bioinformatics</a>, 2025, 26   </p>
-	    <p> (2) Lu Qin; Guangya Zhang; Shaoqiang Zhang*; Yong Chen*; Deep Batch Integration and Denoise of Single‐Cell RNA‐Seq Data, <a class="STYLE12">Advanced Science</a>, 2024, 11(29): 2308934  </p>
-	  <p> (3) Alicia Petrany; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*, Theoretical framework for the difference of two negative binomial distributions and its application in comparative analysis of sequencing data, <a class="STYLE12">Genome Research</a>, 2024,34(10):1636-1650 </p>
-	<p> (4)	Xiguo Zhou, Jingyi Pan, Liang Chen, Shaoqiang Zhang*, and Yong Chen*. 2024. "DeepIMAGER: Deeply Analyzing Gene Regulatory Networks from scRNA-seq Data" <a class="STYLE12">Biomolecules</a>, 2024, 14(7): 766.</p>
-	   <p>(5) Tianyuan Lei; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*; Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations, <a class="STYLE12">Briefings in Bioinformatics</a>, 2023, 24(6): bbad335  </p> 
-	    <p>(6) Madison Dautle; Shaoqiang Zhang*; Yong Chen*; scTIGER: A Deep-Learning Method for Inferring Gene Regulatory Networks from Case versus Control scRNA-seq Datasets, <a class="STYLE12">International Journal of Molecular Sciences</a>, 2023, 24(17): 13339 </p>
-	    <p>(7) Shaoqiang Zhang*; Linjuan Xie; Yaxuan Cui; Benjamin R. Carone; Yong Chen* ; Detecting Fear-Memory-Related Genes from Neuronal scRNA-seq Data by Diverse Distributions and Bhattacharyya Distance, <a class="STYLE12">Biomolecules</a>, 2022, 12(8): 1130 </p>
-	    <p>(8) Atlas M Sardoo, Shaoqiang Zhang, Thomas N Ferraro, Thomas M Keck, Yong Chen*, Decoding brain memory formation by single-cell RNA sequencing, <a class="STYLE12">Briefings in Bioinformatics</a>, 2022, 23(6): bbac412</p>
-	    <p> (9) Yaxuan Cui; Shaoqiang Zhang*; Ying Liang; Xiangyun Wang; Thomas N Ferraro; Yong Chen* ; Consensus clustering of single-cell RNA-seq data by enhancing network affinity, <a class="STYLE12">Briefings in Bioinformatics</a>, 2021, 22(6): bbab236 </p>
+	<p> (1)	Liang Chen; Madison Dautle; Ruoying Gao; Shaoqiang Zhang*; Yong Chen*: Inferring Gene Regulatory Networks from Time-Series scRNA-seq Data via Granger Causal Recurrent Autoencoders,<a class="STYLE12"> Briefings in Bioinformatics</a>, 2025, 26(2):bbaf089</p>
+	<p> (2)	Ruoying Gao; Thomas N. Ferraro; Liang Chen; Shaoqiang Zhang*; Yong Chen*: Enhancing Single-Cell and Bulk Hi-C Data Using a Generative Transformer Model,<a class="STYLE12"> Biology</a>, 2025, 14(3):288</p>    
+		<p> (3) Lu Qin; Guangya Zhang; Shaoqiang Zhang*; Yong Chen*; Deep Batch Integration and Denoise of Single‐Cell RNA‐Seq Data, <a class="STYLE12">Advanced Science</a>, 2024, 11(29): 2308934</p>
+	  <p> (4) Alicia Petrany; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*, Theoretical framework for the difference of two negative binomial distributions and its application in comparative analysis of sequencing data, <a class="STYLE12">Genome Research</a>, 2024,34(10):1636-1650 </p>
+	<p> (5)	Xiguo Zhou, Jingyi Pan, Liang Chen, Shaoqiang Zhang*, and Yong Chen*. DeepIMAGER: Deeply Analyzing Gene Regulatory Networks from scRNA-seq Data, <a class="STYLE12">Biomolecules</a>, 2024, 14(7): 766.</p>
+	   <p>(6) Tianyuan Lei; Ruoyu Chen; Shaoqiang Zhang*; Yong Chen*; Self-supervised deep clustering of single-cell RNA-seq data to hierarchically detect rare cell populations, <a class="STYLE12">Briefings in Bioinformatics</a>, 2023, 24(6): bbad335  </p> 
+	    <p>(7) Madison Dautle; Shaoqiang Zhang*; Yong Chen*; scTIGER: A Deep-Learning Method for Inferring Gene Regulatory Networks from Case versus Control scRNA-seq Datasets, <a class="STYLE12">International Journal of Molecular Sciences</a>, 2023, 24(17): 13339 </p>
+	    <p>(8) Shaoqiang Zhang*; Linjuan Xie; Yaxuan Cui; Benjamin R. Carone; Yong Chen* ; Detecting Fear-Memory-Related Genes from Neuronal scRNA-seq Data by Diverse Distributions and Bhattacharyya Distance, <a class="STYLE12">Biomolecules</a>, 2022, 12(8): 1130 </p>
+	    <p>(9) Atlas M Sardoo, Shaoqiang Zhang, Thomas N Ferraro, Thomas M Keck, Yong Chen*, Decoding brain memory formation by single-cell RNA sequencing, <a class="STYLE12">Briefings in Bioinformatics</a>, 2022, 23(6): bbac412</p>
+	    <p> (10) Yaxuan Cui; Shaoqiang Zhang*; Ying Liang; Xiangyun Wang; Thomas N Ferraro; Yong Chen* ; Consensus clustering of single-cell RNA-seq data by enhancing network affinity, <a class="STYLE12">Briefings in Bioinformatics</a>, 2021, 22(6): bbab236 </p>
 	    <p> </p>
 	    <p> </p>
 
