--- a/funds.htm
+++ b/funds.htm
@@ -216,7 +216,7 @@ border: none;
 				<div class="article">
 					<h3><font size="3">主持项目</font></h3>
 
-<p>1.现主持 天津自然科学基金重点项目： “癌症基因组中的非编码区调控序列致病变异型的识别研究” （合同号19JCZDJC35100），2019-2022；</p>
+<p>1.主持完成 天津自然科学基金重点项目： “癌症基因组中的非编码区调控序列致病变异型的识别研究” （合同号19JCZDJC35100），2019-2022；</p>
 
 <p>2.主持完成 国家自然科学基金面上项目： “ChIP-Seq数据的从头模体发现与RNA-Seq短序的从头组装算法研究” （批准号61572358），2015-2019；</p>
 
@@ -230,7 +230,7 @@ border: none;
 <p>5.主持完成 天津自然科学基金面上项目：“真菌生物全基因组范围转录因子结合位点的计算预测研究”（项目号11JCYBJC26600），2011-2014；</p>
 
 
-<p>6.主持完成天津教委高校科技发展计划项目：“电路与网络中优化问题的算法分析与设计” （No.20071519, 2005年7月-2010年12月）</p>
+<p>6.主持完成 天津教委高校科技发展计划项目：“电路与网络中优化问题的算法分析与设计” （No.20071519, 2005年7月-2010年12月）</p>
 
 
 
@@ -260,7 +260,7 @@ border: none;
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Jan 15,2020</p>
+			<p>Updated by Jan 15,2023</p>
 		</div>
 
 </div>
