--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@ border: none;
 						<hr />
 						<p></p>
 <p>Research areas: </p> <p> Bioinformatics, </p>
-	 <p>Machine Learning,  </p>
-		  <p> High-performance Computing, &  </p>
+	 <p>Machine Learning,</p>
+		  <p> High-performance Computing, </p>
 			   <p>Combinatorial Optimization.</p>
 
 <p></p></font>
@@ -231,10 +231,10 @@ border: none;
 					
 					<p><font size="2"> 
 					主要工作是运用机器学习、组合优化、概率统计等方法通过高性能计算对基因组序列进行功能预测。
-					最近主要工作包括针对单细胞三维基因组学、单细胞转录组学和空间转录组学算法设计和数据分析等。</p></font>
+					最近主要工作包括针对单细胞三维基因组学、单细胞表观基因组学、单细胞转录组学和空间转录组学算法设计和数据分析等。</p></font>
 					<p>The main work is to use machine learning, combinatorial optimization, or probabilistic methods to design high-performance 
 algorithms for predicting the functions of genome sequences.
-Recent work mainly includes algorithm design and data analysis on single-cell 3D genomics (scHi-C), single-cell transcriptomics sequencing (scRNA-seq, scATAC-seq) and spatial transcriptomics.</p>
+Recent work mainly includes algorithm design and data analysis on single-cell 3D genomics (3D-chromatin organization), single-cell epigenomics (chromation accessibility), single-cell transcriptomics and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News: </font></h3>	
 					<p>• 2025年3月，恭喜研究生陈亮同学关于基因调控网络预测算法GRANGER在Briefings in Bioinformatics期刊发表！ </p>
