--- a/pub.htm
+++ b/pub.htm
@@ -218,8 +218,8 @@ border: none;
 
 <font size="2">
 <p>•<a target="_blank" href="http://orcid.org/0000-0002-4127-0539">ORCID</a></p>
-<p>•<a target="_blank" href="http://scholar.huezhi.com/profile/_3SFSYJDhZL_7wUdwI24NPxUBStdtTM2yqosBAqXja37TrnRh_E9pxM5HGmdxvut">huezhi</a></p>
-<p>•<a target="_blank" href="https://au.cnki.net/author/personalInfo/000042926045">CNKI</a></p>
+<p><!--•<a target="_blank" href="http://scholar.huezhi.com/profile/_3SFSYJDhZL_7wUdwI24NPxUBStdtTM2yqosBAqXja37TrnRh_E9pxM5HGmdxvut">huezhi</a>--> </p>
+<p><!--•<a target="_blank" href="https://au.cnki.net/author/personalInfo/000042926045">CNKI</a>--> </p>
 
 
 </font>
