--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@ algorithms for predicting the functions of genome sequences.
 Recent work mainly includes algorithm design and data analysis on single-cell 3D genomics (3D-chromatin organization), single-cell epigenomics (chromation accessibility), single-cell transcriptomics and spatial transcriptomics.</p>
 	<hr />	
 	<h3><font size="3">News: </font></h3>	
+					<p>• 2025年7月，恭喜研究生陈亮同学的硕士毕业论文获得校级优秀毕业论文！ </p>
 					<p>• 2025年3月，恭喜研究生陈亮同学关于基因调控网络预测算法GRANGER在Briefings in Bioinformatics期刊发表！ </p>
 					<p>• 2025年2月，恭喜研究生张光亚同学成功申请美国罗文大学读博资格！ </p>
 					<p>• 2024年11月，恭喜研究生张光亚同学获得2024年度国家奖学金！ </p>
@@ -250,9 +251,9 @@ Recent work mainly includes algorithm design and data analysis on single-cell 3D
 					<p>• 2021年10月，恭喜研究生崔雅轩同学获得2021年国家奖学金，SCENA算法论文在Briefings in Bioinformatics期刊发表！  </p>
 
 					<hr />
-					<p><font size="3">*****本学期开设课程（2025年春季）*****</font></p>
-					<p><font size="2">1. 2024级计算机科学与技术专业基础课《高等数学2-2》</p> 
-					<p><font size="2">2. 2024级研究生课程《高等工程数学》 </p>
+					<p><font size="3">*****本学期开设课程（2025年秋季）*****</font></p>
+					<p><font size="2">1. 2025级大数据专业和物联网专业学位基础课《高等数学2-1》</p> 
+					<p><font size="2">2. 研究生组会 </p>
 					
 	                                 </div>
             </div>	
@@ -260,9 +261,10 @@ Recent work mainly includes algorithm design and data analysis on single-cell 3D
 
 <div class="header_bottom"></div>
 <div class="footer">
-			<p>Updated by Mar 2, 2025</p>
+			<p>Updated by July 2, 2025</p>
 			
 
 </div>
 </body>
 </html>
+
