--- a/grad.htm
+++ b/grad.htm
@@ -228,12 +228,10 @@ border: none;
 <p>&nbsp;2024：潘镜伊、雷添媛、秦璐、朱邦瑜</p>
 <p>&nbsp;2025: 高若莹、陈亮、丛涵林、张光亚</p>
 <hr />
-<p></p>
-
-
-
-
-<p></p>
+<p>•	继续深造/从事学术的毕业生（3名）：</p>
+<p>1. <a target="_blank" href="https://www.imbcams.ac.cn/kxyj/yjjz/ky/ldzx/jygcymyjzx/yzqktz/content_8086">武思文</a>：中国医学科学院（协和医学院）医学生物学研究所 副研究员，课题组组长</p>
+<p>2. 崔雅璇： 日本筑波大学博士毕业，现美国Indiana University Indianaplis做博士后研究。</p>
+<p>3. 张光亚：美国Rowan University大数据专业在读博士 </p>				
 
 					</div>
             </div>	
@@ -247,4 +245,5 @@ border: none;
 </div>
 </body>
 </html>
+
 
