--- a/grad.htm
+++ b/grad.htm
@@ -210,7 +210,7 @@ border: none;
 <p>•	现指导研究生：	
 <p>&nbsp; 刘虎威、陈亚楠、刘欣怡、周泓（2023级）
 <p>&nbsp; 段婉亭、马轶琛、肖雨欣（2024级）
-<p>&nbsp; （2025级）
+<p>&nbsp; 孙渊杰、李星毅（2025级）
 <hr />
 <p>•	已毕业研究生（39名）：</p>
 <p>&nbsp;	2007：丁春勇、侯刚</p>
@@ -245,6 +245,7 @@ border: none;
 </div>
 </body>
 </html>
+
 
 
 
