--- a/index.html
+++ b/index.html
@@ -204,12 +204,13 @@ border: none;
 				</div>	
 				<div class="box" style="width: 144px; height: 700px">
 
-					<font size="2"> <p>Zhang, Shaoqiang, </p> <p>Ph.D. / Professor</p>
+					<font size="2"> <p>ZHANG, Shaoqiang, </p> <p>PhD / Professor</p>
 						<p></p>
 						<hr />
 						<p></p>
 <p>Research areas: </p> <p> Bioinformatics, </p>
 	 <p>Machine Learning,</p>
+	 <p>Deep Learning,</p>
 		  <p> High-performance Computing, </p>
 			   <p>Combinatorial Optimization.</p>
 
@@ -221,20 +222,22 @@ border: none;
             <div class="right_side" style="width: 500px; height: 900px">
 				<div class="article">
 					<h3>&nbsp;</h3>
-					<h3><font size="3">张少强 博士(天津师范大学, 教授) </font></h3>
-					<i>研究兴趣：生物信息学、机器学习算法、高性能计算、组合优化算法</i>
+					<h3><font size="3">张少强 博士(天津师范大学, 教授) <a target="_blank" href="https://orcid.org/0000-0002-4127-0539"><img border="0" src="images/orcid.logo.icon.svg" width="20" height="20"> </a></font></h3>
+					<i>研究兴趣：生物信息学、机器学习、深度学习、组合优化、高性能计算</i>
 					
 
 					</font></p>
 					<hr />
-					<p> <a target="_blank" href="cv.htm"><img border="0" src="images/zsqp.JPG" width="140" height="225" align="right"></a></p>
+					<p> <a target="_blank" href="cv.htm"><img border="0" src="images/zsq2025.jpg" width="140" height="200" align="right"></a></p>
 					
 					<p><font size="2"> 
-					主要工作是运用机器学习、组合优化、概率统计等方法通过高性能计算对基因组序列进行功能预测。
-					最近主要工作包括针对单细胞三维基因组学、单细胞表观基因组学、单细胞转录组学和空间转录组学算法设计和数据分析等。</p></font>
-					<p>The main work is to use machine learning, combinatorial optimization, or probabilistic methods to design high-performance 
+					主要工作是运用机器学习、深度学习、组合优化、概率统计等方法通过高性能计算对基因组序列进行功能预测。
+					最近主要工作是基于各类单细胞组学或多组学的数据进行分析和算法设计等。</p></font>
+					<p>The main work is to use machine learning,deep learning, combinatorial optimization, or 
+					probabilistic & statistical methods to design high-performance 
 algorithms for predicting the functions of genome sequences.
-Recent work mainly includes algorithm design and data analysis on single-cell 3D genomics (3D-chromatin organization), single-cell epigenomics (chromation accessibility), single-cell transcriptomics and spatial transcriptomics.</p>
+Recent work mainly includes algorithm design and data analysis on omics data including single-cell 3D genomics, 
+single-cell epigenomics, single-cell transcriptomics, spatial transcriptomics and single-cell proteomics.</p>
 	<hr />	
 	<h3><font size="3">News: </font></h3>	
 					<p>• 2025年7月，恭喜研究生陈亮同学的硕士毕业论文获得校级优秀毕业论文！ </p>
